--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "recoil": "^0.7.7",
+    "zmp-framework": "^1.7.5",
     "zmp-sdk": "^2.35.5",
     "zmp-ui": "^1.9.1"
   },
