--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "axios": "^1.6.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.22.1",
     "recoil": "^0.7.7",
     "zmp-framework": "^1.7.5",
