--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^9.1.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.22.1",
+    "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
     "zmp-framework": "^1.7.5",
     "zmp-sdk": "^2.35.5",
